--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ scipy==1.11.3
 setuptools==68.2.2
 six==1.16.0
 stack-data==0.6.3
+streamlit
 tenacity==8.2.3
 textblob==0.17.1
 threadpoolctl==3.2.0
